--- a/VLingPai/Controller/ConnecteDiscountViewController.xib
+++ b/VLingPai/Controller/ConnecteDiscountViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConnecteDiscountViewController">
             <connections>
+                <outlet property="btnConnecteAccount" destination="Fo8-b3-y6H" id="YNu-KR-5t9"/>
                 <outlet property="labSystemName" destination="IBf-Eu-jJ6" id="7Ie-SP-EvX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
